force-app/main/default/objects/Employee__c/fields/Employee_User__c.field-meta.xml
<CustomField>
    <fullName>Employee_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User</relationshipLabel>
    <relationshipName>Employee_User</relationshipName>
    <type>Lookup</type>
</CustomField>