force-app/main/default/objects/Employee__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HR Manager</fullName>
            </value>
            <value>
                <fullName>HR Business Partner</fullName>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
            <value>
                <fullName>IT Manager</fullName>
            </value>
            <value>
                <fullName>Senior Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>Salesforce Administrator</fullName>
            </value>
            <value>
                <fullName>Junior Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>IT Support Specialist</fullName>
            </value>
            <value>
                <fullName>Finance Manager</fullName>
            </value>
            <value>
                <fullName>Financial Analyst</fullName>
            </value>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Account Executive</fullName>
            </value>
            <value>
                <fullName>Sales Representative</fullName>
            </value>
            <value>
                <fullName>Sales Operations Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>