force-app/main/default/objects/Employee__c/validationRules/Active_Employee_Requires_Department.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Employee_Requires_Department</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Active&quot;),
    ISBLANK(Department__c)
)</errorConditionFormula>
    <errorMessage>Active employees must be assigned to a department.</errorMessage>
</ValidationRule>