force-app/main/default/objects/Employee__c/validationRules/Employee_Cannot_Be_Own_Manager.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_Cannot_Be_Own_Manager</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Manager__c)),
    Manager__c = Id
)</errorConditionFormula>
    <errorDisplayField>Manager__c</errorDisplayField>
    <errorMessage>An employee cannot be their own manager.</errorMessage>
</ValidationRule>