force-app/main/default/objects/Employee__c/validationRules/Hire_Date_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Hire_Date_Cannot_Be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Hire_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Hire_Date__c</errorDisplayField>
    <errorMessage>Hire Date cannot be in the future.</errorMessage>
</ValidationRule>