force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Department__c</columns>
    <columns>Manager__c</columns>
    <columns>Location__c</columns>
    <columns>Employee_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>